# learning-py

./: README.md  date_ops.py  decorator.py  ds.py  fib.py  library_system.py  main.py  module.py  pyproject.toml  square_root.py  time_ops.py  toml_demo.py
04/: aiohttp_demo.py  asyncio_demo.py  thread_pool_demo.py
05/: base64_demo.py  endec_demo.py  hash_demo.py
jupyter-demo/: comprehensions.ipynb  decorators.ipynb  exam_writefile  file-methods.ipynb  function.ipynb  iterator-generator.ipynb  lambda.ipynb  queue.py  stack.py  std.py  use_stack.py
normal-project-demo/: README.md  main.py
rw/: r.py  w.py
tests/: name_func.py  test_fixture.py  test_name_func.py
toml-demo/: .gitignore  config.toml  pyproject.toml
uv-project-demo/: README.md  main.py  pyproject.toml
